Clean-up enrollment flow
